<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:title="@string/menu_undo"
        android:icon="@drawable/ic_undo"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:title="@string/menu_redo"
        android:icon="@drawable/ic_redo"
        android:enabled="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_summary"
        android:title="@string/menu_summary"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reset"
        android:title="@string/menu_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_apply"
        android:title="@string/menu_apply"
        app:showAsAction="never" />

</menu>
